--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <div class="window_f1">
+    <h1>GenerateResset</h1>
+    <div class="main">
+      
+    <div class="window">
       <input class="inp" type="number" value="0" max="20" min="0" />
       <button class="button_gen">Generate</button>
     </div>
     <div class="container"></div>
+  </div>
     <script src="index.js"></script>
   </body>
 </html>
