--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
-    <h1>GenerateResset</h1>
+    <h1>GenerateReset</h1>
     <div class="main">
       
     <div class="window">
