--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>GenerateResset</title>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
@@ -15,7 +15,7 @@
       <input class="inp" type="number" value="0" max="20" min="0" />
       <button class="button_gen">Generate</button>
     </div>
-    <div class="container"></div>
+    <div class="container" ></div>
   </div>
     <script src="index.js"></script>
   </body>
